# cargo-flatpack

./: Cargo.toml  README.md
src/: lock_file.rs  main.rs  manifest.rs
