[package]
name = "cargo-flatpack"
version = "0.0.0"
edition = "2021"

authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
description = "Generate flatpack manifest from Cargo.lock"
keywords = ["flatpack"]
license = "MIT"
repository = "https://github.com/PolyMeilex/cargo-flatpack"
documentation = "https://docs.rs/cargo-flatpack"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
toml = { version = "0.5.9", features = ["preserve_order"] }
